<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/thumbnail_dialog_width"
    android:layout_height="@dimen/thumbnail_dialog_height"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="@dimen/thumbnail_dialog_width"
        android:layout_height="@dimen/thumbnail_dialog_height"
        android:background="@drawable/all_bg"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <!--标题-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/thumbnail_dialog_title_bar_height"
            android:background="@drawable/captain_bg"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/back_btn_size"
                android:layout_height="@dimen/back_btn_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/back_btn_margin_start"
                android:src="@drawable/back"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/thumbnail_setting"
                android:textColor="@android:color/white"
                android:textSize="@dimen/title_text_size" />

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="@dimen/cancel_btn_size"
                android:layout_height="@dimen/cancel_btn_size"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/cancel_btn_margin_end"
                android:src="@drawable/cancel" />
        </RelativeLayout>

        <!--预览-->
        <LinearLayout
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bg"
            android:clipChildren="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/thumbnail_preview_padding_top"
            android:visibility="visible">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/thumbnail_preview_circle_size"
                android:layout_height="@dimen/thumbnail_preview_circle_size"
                android:layout_marginBottom="@dimen/thumbnail_preview_circle_margin_bottom"
                android:focusable="true"
                android:src="@drawable/guest"
                app:riv_oval="true" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/thumbnail_preview_bottom_container_height"
                    android:descendantFocusability="afterDescendants">

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="@dimen/thumbnail_preview_save_button_width"
                        android:layout_height="@dimen/bottom_bar_btn_height"
                        android:layout_marginEnd="@dimen/thumbnail_preview_save_button_margin_end"
                        android:background="@drawable/button_bg"
                        android:fontFamily="sans-serif"
                        android:nextFocusUp="@+id/iv_cancel"
                        android:text="@string/save"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/bottom_bar_btn_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btn_browse"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_browse"
                        android:layout_width="@dimen/thumbnail_preview_save_button_width"
                        android:layout_height="@dimen/bottom_bar_btn_height"
                        android:background="@drawable/button_bg"
                        android:focusable="true"
                        android:fontFamily="sans-serif"
                        android:text="@string/browse"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/bottom_bar_btn_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/btn_save"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginEnd="@dimen/thumbnail_preview_save_button_margin_end"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/reset"
                    android:textColor="@color/littleWhite"
                    android:textSize="@dimen/reset_text_size" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <!--裁剪-->
    <LinearLayout
        android:id="@+id/crop_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/thumbnail_preview_padding_top"
        android:visibility="gone">

        <com.wallpaper.gallery.gallery.utils.LikeQQCropViewTwo
            android:id="@+id/clipImageLayout"
            android:layout_width="@dimen/thumbnail_crop_width"
            android:layout_height="@dimen/thumbnail_crop_height"
            android:background="@android:color/black"
            android:focusable="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_rotate"
                android:layout_width="@dimen/rotate_btn_size"
                android:layout_height="@dimen/rotate_btn_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/rotate_btn_margin_left"
                android:focusable="true"
                android:src="@drawable/rotate" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="@dimen/next_btn_width"
                android:layout_height="@dimen/next_btn_height"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_bg"
                android:focusable="true"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="@dimen/next_btn_text_size" />

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>